Revise 'About Me' section in index.html
Updated personal description to reflect current studies and interests.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="bg-white rounded-xl shadow-md p-8 border border-slate-200">
             <h2 class="text-2xl font-bold text-slate-900 mb-4">About Me</h2>
             <p class="text-slate-700 leading-relaxed mb-4">
-                I'm a Master's student in Data Science at Indiana University Bloomington with a strong foundation in Artificial Intelligence and Machine Learning, backed by a Bachelor's degree in AI & ML (Honors). I'm passionate about building real-world, scalable systems that combine data, machine learning, and NLP/GenAI to solve meaningful problems.
+                I’m a Master’s student in Data Science at Indiana University Bloomington with a background in Artificial Intelligence and Machine Learning. I work on building applied ML and GenAI systems-ranging from NLP research and LLM fine-tuning to cloud-deployed, data-driven applications. My interests lie in turning complex data and models into reliable, scalable solutions with real-world impact.
             </p>
             <div class="grid grid-cols-2 md:grid-cols-4 gap-4 mt-6">
                 <div class="text-center p-4 bg-blue-50 rounded-lg">
